{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Gameplay",
            "id": "fdc354ec-a06f-48fe-9ffd-dd220f8a21d5",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "ad974cf4-78d3-47e0-88c7-584d0e00cade",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "a33820c3-a7b6-427b-a907-bdcaea71f053",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "NextLevel",
                    "type": "Button",
                    "id": "6ca82f75-16d7-4ac3-ba5e-f44e75e50232",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "b91fe38c-d17d-4c36-9b38-cc83dd2557ea",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "a9223ded-e6ed-463f-84da-7dee56763e73",
                    "path": "<XInputController>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3c8e2fad-1258-4e70-9998-3b6ec4dca8da",
                    "path": "<XInputController>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4b549b9c-9cb1-4b58-ab23-e45a2331bbcc",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6c2ea19-9ae5-4211-b185-e180366a6f2b",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}